; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_ad_set_domain.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_ad_set_domain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.advert = type { i32 }
%struct.lev_targ_ad_setint = type { i32 }

@verbosity = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"in do_ad_set_domain (%d, %d):\0A\00", align 1
@MAX_AD_DOMAIN = common dso_local global i32 0, align 4
@LEV_TARG_AD_SETDOMAIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_ad_set_domain(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.advert*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.lev_targ_ad_setint*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @ad_is_ancient(i32 %10)
  %12 = call %struct.advert* @get_ad_f(i32 %9, i32 %11)
  store %struct.advert* %12, %struct.advert** %6, align 8
  %13 = load i64, i64* @verbosity, align 8
  %14 = icmp sgt i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load i32, i32* @stderr, align 4
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @fprintf(i32 %16, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %15, %2
  %21 = load %struct.advert*, %struct.advert** %6, align 8
  %22 = icmp ne %struct.advert* %21, null
  br i1 %22, label %23, label %30

23:                                               ; preds = %20
  %24 = load i32, i32* %5, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %30, label %26

26:                                               ; preds = %23
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* @MAX_AD_DOMAIN, align 4
  %29 = icmp sgt i32 %27, %28
  br i1 %29, label %30, label %31

30:                                               ; preds = %26, %23, %20
  store i32 0, i32* %3, align 4
  br label %54

31:                                               ; preds = %26
  %32 = load %struct.advert*, %struct.advert** %6, align 8
  %33 = call i32 @load_ancient_ad(%struct.advert* %32)
  store i32 %33, i32* %7, align 4
  %34 = load i32, i32* %7, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %31
  %37 = load i32, i32* %7, align 4
  store i32 %37, i32* %3, align 4
  br label %54

38:                                               ; preds = %31
  %39 = load %struct.advert*, %struct.advert** %6, align 8
  %40 = getelementptr inbounds %struct.advert, %struct.advert* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* %5, align 4
  %43 = icmp eq i32 %41, %42
  br i1 %43, label %44, label %45

44:                                               ; preds = %38
  store i32 1, i32* %3, align 4
  br label %54

45:                                               ; preds = %38
  %46 = load i32, i32* @LEV_TARG_AD_SETDOMAIN, align 4
  %47 = load i32, i32* %4, align 4
  %48 = call %struct.lev_targ_ad_setint* @alloc_log_event(i32 %46, i32 12, i32 %47)
  store %struct.lev_targ_ad_setint* %48, %struct.lev_targ_ad_setint** %8, align 8
  %49 = load i32, i32* %5, align 4
  %50 = load %struct.lev_targ_ad_setint*, %struct.lev_targ_ad_setint** %8, align 8
  %51 = getelementptr inbounds %struct.lev_targ_ad_setint, %struct.lev_targ_ad_setint* %50, i32 0, i32 0
  store i32 %49, i32* %51, align 4
  %52 = load %struct.lev_targ_ad_setint*, %struct.lev_targ_ad_setint** %8, align 8
  %53 = call i32 @ad_set_domain(%struct.lev_targ_ad_setint* %52)
  store i32 %53, i32* %3, align 4
  br label %54

54:                                               ; preds = %45, %44, %36, %30
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

declare dso_local %struct.advert* @get_ad_f(i32, i32) #1

declare dso_local i32 @ad_is_ancient(i32) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i32) #1

declare dso_local i32 @load_ancient_ad(%struct.advert*) #1

declare dso_local %struct.lev_targ_ad_setint* @alloc_log_event(i32, i32, i32) #1

declare dso_local i32 @ad_set_domain(%struct.lev_targ_ad_setint*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
